# respec

./: README.md  pyproject.toml
examples/: reglist.json
