[project]
name = "ReSpec"
dynamic = ["version"]
description = "Register Specification Language"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6==6.9",
    "pyqtgraph==0.13.7",
    "unlib @ git+https://github.com/priimak/unlib.git@v0.2.2",
    "pytide6 @ git+https://github.com/priimak/PyTide6.git@v0.6.0",
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.svg"]

[project.scripts]
rx = "respec.gui.main:main"
